@@ -57,8 +57,6 @@ module.exports = {
 	},
 	entry: {
 		index: './client/blocks/index.js',
-		old_settings_upe_toggle:
-			'./client/entrypoints/old-settings-upe-toggle/index.js',
 		payment_requests_settings:
 			'./client/entrypoints/payment-request-settings/index.js',
 		upe_classic: './client/classic/upe/index.js',
